[package]
name = "cpp_stl"
version = "0.1.0"
authors = ["Boncheol Gu <boncheol.gu@gmail.com>"]

description = "Rust bindings for C++ standard template library"
keywords = ["C++", "stl"]
license = "MIT/Apache-2.0"
repository = "https://github.com/boncheolgu/cpp_stl"
readme = "README.md"
edition = "2018"

[dependencies]
cpp = "0.5"
libc = "0.2"

[build-dependencies]
bindgen = "0.50"
cpp_build = "0.5"

